# gba-panepon

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  gba.toolchain.cmake  instrument.js
game/: CMakeLists.txt  ldscript.ld
game/res/: ponagb2m_GAME_OVER_CLC.acl  ponagb2m_bga.acl  ponagb2m_dark.asc.lz  ponagb2m_gameover.asc.lz  ponagb2m_kabe.asc.lz  ponagb2m_obj.acl  ponagb2m_pause.asc.lz  ponagb2m_sel_help.asc.lz  ponagb2m_sel_pupu.asc.lz  ponagb2m_select.asc.lz  ponagb2m_title.acg.lz  ponagb2m_title_obj.acg.lz  ponagb2m_title_obj.acl
game/res-bin/: ponagb2m_obj.acg.lz  ponagb2m_title.acg.lz
game/res-de/: healthsafety_jp.acg.lz  ponagb2m_bga.acg.lz  ponagb2m_obj.acg.lz  ponagb2m_pause.asc.lz  ponagb2m_title_obj.acg.lz
game/res-elf/: ponagb2m_bga.acg.lz  ponagb2m_frame.asc.lz  ponagb2m_obj.acg.lz  ponagb2m_title.acl  ponagb2m_title.asc.lz
game/res-en/: healthsafety_jp.acg.lz  healthsafety_jp.acl  ponagb2m_bga.acg.lz  ponagb2m_bga.acl  ponagb2m_obj.acg.lz  ponagb2m_pause.asc.lz  ponagb2m_sel_help.asc.lz  ponagb2m_title.acg.lz  ponagb2m_title.acl
game/res-es/: healthsafety_jp.acg.lz  ponagb2m_bga.acg.lz  ponagb2m_obj.acg.lz  ponagb2m_pause.asc.lz  ponagb2m_title_obj.acg.lz
game/res-fr/: healthsafety_jp.acg.lz  ponagb2m_bga.acg.lz  ponagb2m_obj.acg.lz  ponagb2m_pause.asc.lz  ponagb2m_title_obj.acg.lz
game/res-it/: healthsafety_jp.acg.lz  ponagb2m_bga.acg.lz  ponagb2m_obj.acg.lz  ponagb2m_pause.asc.lz  ponagb2m_title_obj.acg.lz
game/res-v1/: ponagb2m_title.acl
game/res-v2/: healthsafety_jp.acg.lz  healthsafety_jp.acl  ponagb2m_title.acg.lz  ponagb2m_title.acl  ponagb2m_title.asc.lz  ponagb2m_title_obj.acg.lz  ponagb2m_title_obj.acl
game/res-v2/ponagb2m_kabe/: Blu2.acl
game/res/np1p_game_frame/: EASY.asc  HARD.asc  NORMAL.asc  OjamaLv.asc  SLOW1.asc  SLOW2.asc  SLOW3.asc  S_HARD.asc  SpeedLv.asc  V_HARD.asc
game/res/ponagb2m_kabe/: Blk.acl  Blk1.acl  Blk2.acl  Blu.acl  Blu1.acl  Blu2.acl  Grn.acl  Grn1.acl  Grn2.acl  Miz.acl  Miz1.acl  Miz2.acl  Mur.acl  Mur1.acl  Mur2.acl  Nml.acl  Red.acl  Red1.acl  Red2.acl  Wht.acl  Wht1.acl  Wht2.acl  Ylw.acl  Ylw1.acl  Ylw2.acl
game/src/: agb_start_from_arm.s  aob.s  aob2.s  baku.s  bss2.s  crt0_joy_boot.s  crt0_multi_boot.s  data.c  data.s  dummy.s  main.c  nis_gdat.c  nis_pro.c  nis_sel.c  niscpara.c  nisctc.c  nisdata0.h  nisobj.h  np_Msg_Help.s  pupuri.s  rom_header.s  sound3.s  sounddata.s  sounddata2.s  src.s  src2.s  strings.s
game/src-bin/: np_Msg_Help.s
game/src-bin/functions/: NisCtcList_QuickSort.s  NisCtc_CadPut.s  NisCtc_PutCtc.s  VBlankIntr.s  agb_start.s  nis_game_main.s  nis_pause_exit.s  nis_pause_init.s  nis_pause_main.s  np_AgbKey_Init.s  np_BigMojiYure_main.s  np_DemoKeyDat_Play.s  np_PutResultNumber.s  np_Put_GOCnt_main.s  np_SE_rens_douj.s  np_add_bonus.s  np_bak_main_knbldfkjnsdfjkjnl.s  np_baku_ani_hass.s  np_clear_ch.s  np_field_yure.s  np_fldyu_set.s  np_game_code_kosu.s  np_game_code_rens.s  np_game_code_set.s  np_game_code_sort.s  np_game_para_rd2.s  np_gray_has_1.s  np_kiken_anm.s  np_kiken_bgm.s  np_mem_roll_up.s  np_mh_akis.s  np_mh_douj.s  np_mh_rens.s  np_mh_xys.s  np_mk_put_stop.s  np_mk_sub.s  np_mks_uzuuput.s  np_ojama_shoukyo.s  np_ojm_atahas.s  np_ojm_has.s  (+32 more)
game/src-v1/: baku.s  pupuri.s
game/src-v1/functions/: NisCtc_EffPut.s  NisCtc_PutCtc_R.s  NisOptSel_np_sw_field_color.s  NisOptSel_np_sw_kage_color.s  NisSelectMain.s  nis_game_over.s  nis_game_ram_clr.s  nis_pause_select.s  nis_pause_wait.s  nis_pause_window.s  np_PutObjPnl.s  np_bak_check.s  np_bak_main.s  np_baku_ani_hass.s  np_csl_swap.s  np_fldyu_ojmset.s  np_game_code_douj.s  np_game_code_read.s  np_game_start_set1.s  np_gameover_chk.s  np_gp_GAMEPARA_CMD_PNLKIND.s  np_gp_GAMEPARA_CMD_SPNLCHK.s  np_mh_bikk.s  np_mh_fgs.s  np_mk_hass.s  np_mk_main.s  np_mk_put_agb.s  np_mks_markput.s  np_mks_tenjof.s  np_otai_ph.s  np_otai_rd.s  np_otai_tr.s  np_rakka_main.s  np_rakka_subs.s  np_rdstpct_cntset.s  np_rdyst_cslmov.s  np_roll_up.s  np_set_field_bgm.s  np_shoukyo_kensaku.s  (+21 more)
game/src-v2/: msg_de.c  msg_en.c  msg_es.c  msg_fr.c  msg_it.c
m4a/: CMakeLists.txt  data.c  m4a_1.s  m4a_2.c  m4a_3.s  m4a_4.c
m4a/asm/: macros.inc
m4a/include/: m4alib.h
sound/: CMakeLists.txt
sound/aiff/: JP_8_square_c4_l_13k8b.aif  clarinet_c4_el_13k8b.aif  drum_claves_e_13k8b.aif  drum_d1_snare_13k8b.aif  drum_hand_clap_13k8b.aif  drum_hihat_e2_13k8b.aif  drum_kick_b_e_13k8b.aif  drum_side_stick.aif  guitar_c3_e4l_13k8b.aif  marimba_f4_e_l_13k8b.aif  panepon_se_b_break_1_13k8b.aif  panepon_se_b_break_2_13k8b.aif  panepon_se_b_break_4_13k8b.aif  panepon_se_b_drop1_e_13k8b.aif  panepon_se_break_e4_13k8b.aif  panepon_se_cursor_e1_13k8b.aif  pick_bass_e1_el_13k8b.aif  picked_bass_c2_e3l_13k8b.aif  pupuri_1_13k8b.aif  pupuri_2_13k8b.aif  pupuri_3_13k8b.aif  pupuu_5_1_13k8b.aif  pupuu_5_2_13k8b.aif  slap_bass_e4l_13k8b.aif  square_wave_f4_13k8b.aif  trumpet_f4_e1_l_13k8b.aif  vibraphon_f4_e2l_13k8b.aif
sound/src/: MPlayDef.s  cnt_bgm_stop.s  panepon_bgm_flower_02.s  panepon_bgm_flower_e12_01.s  panepon_bgm_gameover.s  panepon_bgm_result_e1.s  panepon_bgm_select_e3.s  panepon_bgm_title_e.s  panepon_se_block_break_1_1.s  panepon_se_block_break_1_2.s  panepon_se_block_break_1_3.s  panepon_se_block_break_1_4.s  panepon_se_block_break_1_5.s  panepon_se_block_break_1_6.s  panepon_se_block_break_1_7.s  panepon_se_block_break_1_8.s  panepon_se_block_break_1_9.s  panepon_se_block_break_1_A.s  panepon_se_block_break_2_1.s  panepon_se_block_break_2_2.s  panepon_se_block_break_2_3.s  panepon_se_block_break_2_4.s  panepon_se_block_break_2_5.s  panepon_se_block_break_2_6.s  panepon_se_block_break_2_7.s  panepon_se_block_break_2_8.s  panepon_se_block_break_2_9.s  panepon_se_block_break_2_A.s  panepon_se_block_break_3_1.s  panepon_se_block_break_3_2.s  panepon_se_block_break_3_3.s  panepon_se_block_break_3_4.s  panepon_se_block_break_3_5.s  panepon_se_block_break_3_6.s  panepon_se_block_break_3_7.s  panepon_se_block_break_3_8.s  panepon_se_block_break_3_9.s  panepon_se_block_break_3_A.s  panepon_se_block_break_4_1.s  panepon_se_block_break_4_2.s  (+27 more)
(+581 files in other folders)
