set(SRC
        src/panepon_se_sys_menu_cursor.s
        src/panepon_se_sys_menu_ok.s
        src/panepon_se_sys_menu_cancel.s
        src/panepon_se_sys_pause.s
        src/panepon_se_count_down.s
        src/panepon_se_count_start.s
        src/panepon_se_cursor.s
        src/panepon_se_panel_switch.s
        src/panepon_se_block_break_1_1.s
        src/panepon_se_block_break_1_2.s
        src/panepon_se_block_break_1_3.s
        src/panepon_se_block_break_1_4.s
        src/panepon_se_block_break_1_5.s
        src/panepon_se_block_break_1_6.s
        src/panepon_se_block_break_1_7.s
        src/panepon_se_block_break_1_8.s
        src/panepon_se_block_break_1_9.s
        src/panepon_se_block_break_1_A.s
        src/panepon_se_block_break_2_1.s
        src/panepon_se_block_break_2_2.s
        src/panepon_se_block_break_2_3.s
        src/panepon_se_block_break_2_4.s
        src/panepon_se_block_break_2_5.s
        src/panepon_se_block_break_2_6.s
        src/panepon_se_block_break_2_7.s
        src/panepon_se_block_break_2_8.s
        src/panepon_se_block_break_2_9.s
        src/panepon_se_block_break_2_A.s
        src/panepon_se_block_break_3_1.s
        src/panepon_se_block_break_3_2.s
        src/panepon_se_block_break_3_3.s
        src/panepon_se_block_break_3_4.s
        src/panepon_se_block_break_3_5.s
        src/panepon_se_block_break_3_6.s
        src/panepon_se_block_break_3_7.s
        src/panepon_se_block_break_3_8.s
        src/panepon_se_block_break_3_9.s
        src/panepon_se_block_break_3_A.s
        src/panepon_se_block_break_4_1.s
        src/panepon_se_block_break_4_2.s
        src/panepon_se_block_break_4_3.s
        src/panepon_se_block_break_4_4.s
        src/panepon_se_block_break_4_5.s
        src/panepon_se_block_break_4_6.s
        src/panepon_se_block_break_4_7.s
        src/panepon_se_block_break_4_8.s
        src/panepon_se_block_break_4_9.s
        src/panepon_se_block_break_4_A.s
        src/panepon_se_panel_drop.s
        src/panepon_se_block_drop_big_1.s
        src/panepon_se_block_drop_big_2.s
        src/panepon_se_block_d_big_e9_3.s
        src/panepon_se_fanfare_1.s
        src/panepon_se_fanfare_2.s
        src/panepon_se_fanfare_3.s
        src/panepon_se_chain_voice_e.s
        src/panepon_se_panel_over_e2.s
        src/panepon_se_game_over_fall.s
        src/panepon_se_stop_voice_e4.s
        src/cnt_bgm_stop.s
        src/panepon_bgm_flower_e12_01.s
        src/panepon_bgm_flower_02.s
        src/panepon_bgm_gameover.s
        src/panepon_bgm_select_e3.s
        src/panepon_bgm_result_e1.s
        src/panepon_bgm_title_e.s
        )

add_library (sound STATIC ${SRC})
target_include_directories(sound PRIVATE src)